Edit title styles, html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                     lower contrast</p>
                 <button>Sign up</button>
             </div>
-            <img src="./img/underpass.jpg" alt="View from behind a man walking in an underpass with warm lighting">
+            <div class="title-image">
+                <img src="./img/underpass.jpg" alt="View from behind a man walking in an underpass with warm lighting">
+            </div>
         </div>
         <div class="info-wrapper">
             <h2>Some random information.</h2>
