Style info section using flexbox rules

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="title-wrapper">
             <div class="title-writing">
-                <h1>This website is awesome</h1>
+                <h1>Main title for this website</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color
                     is
                     lower contrast</p>
@@ -30,21 +30,21 @@
             </div>
         </div>
         <div class="info-wrapper">
-            <h2>Some random information.</h2>
+            <h2>Some images with information</h2>
             <div class="info-figures">
-                <figure class="info-figure">
+                <figure>
                     <img src="./img/plant.jpg" alt="Close up of a freen plant amongst many other of the same kind">
                     <figcaption>this is some subtext under an illustration image</figcaption>
                 </figure>
-                <figure class="info-item">
+                <figure>
                     <img src="./img/sea.jpg" alt="Choppy ocean surface with fog above">
                     <figcaption>this is some subtext under an illustration image</figcaption>
                 </figure>
-                <figure class="info-item">
+                <figure>
                     <img src="./img/tulip.jpg" alt="Close up of a white tulip within a green plant">
                     <figcaption>this is some subtext under an illustration image</figcaption>
                 </figure>
-                <figure class="info-item">
+                <figure>
                     <img src="./img/wheat.jpg" alt="Close up of wheat with a blue sky in the background">
                     <figcaption>this is some subtext under an illustration image</figcaption>
                 </figure>
