--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
             <p>Sign up for our product by clicking that button right over there!</p>
             <button>Sign up</button>
         </div>
+        <div class="footer">
+            Copyright © The Odin Project 2021
+        </div>
     </body>
 
 </html>
