Style call to action section

--- a/index.html
+++ b/index.html
@@ -61,9 +61,13 @@
             <p>- Thor, God of Thunder</p>
         </div>
         <div class="call-to-action-wrapper">
-            <div>Call to action! It's time!</div>
-            <p>Sign up for our product by clicking that button right over there!</p>
-            <button>Sign up</button>
+            <div class="call-to-action">
+                <div class="cta-lhs">
+                    <div class="cta-title">Call to action! It's time!</div>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button>Sign up</button>
+            </div>
         </div>
         <div class="footer">
             Copyright © The Odin Project 2021
