Change info section styling

--- a/index.html
+++ b/index.html
@@ -30,24 +30,26 @@
             </div>
         </div>
         <div class="info-wrapper">
-            <h2>Some images with information</h2>
-            <div class="info-figures">
-                <figure>
-                    <img src="./img/plant.jpg" alt="Close up of a freen plant amongst many other of the same kind">
-                    <figcaption>this is some subtext under an illustration image</figcaption>
-                </figure>
-                <figure>
-                    <img src="./img/sea.jpg" alt="Choppy ocean surface with fog above">
-                    <figcaption>this is some subtext under an illustration image</figcaption>
-                </figure>
-                <figure>
-                    <img src="./img/tulip.jpg" alt="Close up of a white tulip within a green plant">
-                    <figcaption>this is some subtext under an illustration image</figcaption>
-                </figure>
-                <figure>
-                    <img src="./img/wheat.jpg" alt="Close up of wheat with a blue sky in the background">
-                    <figcaption>this is some subtext under an illustration image</figcaption>
-                </figure>
+            <div class="info">
+                <h2>Some images with information</h2>
+                <div class="info-figures">
+                    <figure>
+                        <img src="./img/plant.jpg" alt="Close up of a freen plant amongst many other of the same kind">
+                        <figcaption>this is some subtext under an illustration image</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="./img/sea.jpg" alt="Choppy ocean surface with fog above">
+                        <figcaption>this is some subtext under an illustration image</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="./img/tulip.jpg" alt="Close up of a white tulip within a green plant">
+                        <figcaption>this is some subtext under an illustration image</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="./img/wheat.jpg" alt="Close up of wheat with a blue sky in the background">
+                        <figcaption>this is some subtext under an illustration image</figcaption>
+                    </figure>
+                </div>
             </div>
         </div>
         <div class="quote-wrapper">
