--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
             </ul>
         </div>
         <div class="title-wrapper">
-            <div class="title-writing">
-                <h1>Main title for this website</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color
-                    is
-                    lower contrast</p>
-                <button>Sign up</button>
-            </div>
-            <div class="title-image">
+            <div class="title">
+                <div class="title-writing">
+                    <h1>Main title for this website</h1>
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the
+                        color
+                        is
+                        lower contrast</p>
+                    <button>Sign up</button>
+                </div>
                 <img src="./img/underpass.jpg" alt="View from behind a man walking in an underpass with warm lighting">
             </div>
         </div>
