--- a/index.html
+++ b/index.html
@@ -10,73 +10,14 @@
 
     <body>
         <div class="header-wrapper">
-            <div class="header-logo">Header Logo</div>
-            <ul class="header-links">
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
-            </ul>
-        </div>
-        <div class="title-wrapper">
-            <div class="title">
-                <div class="title-writing">
-                    <h1>Main title for this website</h1>
-                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the
-                        color
-                        is
-                        lower contrast</p>
-                    <button>Sign up</button>
-                </div>
-                <img src="./img/underpass.jpg" alt="View from behind a man walking in an underpass with warm lighting">
+            <div class="header">
+                <div class="logo">Header Logo</div>
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
             </div>
-        </div>
-        <div class="info-wrapper">
-            <div class="info">
-                <h2>Some images with information</h2>
-                <div class="info-figures">
-                    <figure>
-                        <img src="./img/plant.jpg" alt="Close up of a freen plant amongst many other of the same kind">
-                        <figcaption>this is some subtext under an illustration image</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="./img/sea.jpg" alt="Choppy ocean surface with fog above">
-                        <figcaption>this is some subtext under an illustration image</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="./img/tulip.jpg" alt="Close up of a white tulip within a green plant">
-                        <figcaption>this is some subtext under an illustration image</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="./img/wheat.jpg" alt="Close up of wheat with a blue sky in the background">
-                        <figcaption>this is some subtext under an illustration image</figcaption>
-                    </figure>
-                </div>
-            </div>
-        </div>
-        <div class="quote-wrapper">
-            <div class="quote">
-                <blockquote>
-                    <p>
-                        This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
-                        or
-                        maybe
-                        people will actually read it. Who knows? All I know is that it looks nice.
-                    </p>
-                </blockquote>
-                <p>- Thor, God of Thunder</p>
-            </div>
-        </div>
-        <div class="call-to-action-wrapper">
-            <div class="call-to-action">
-                <div class="cta-lhs">
-                    <div class="cta-title">Call to action! It's time!</div>
-                    <p>Sign up for our product by clicking that button right over there!</p>
-                </div>
-                <button>Sign up</button>
-            </div>
-        </div>
-        <div class="footer">
-            Copyright © The Odin Project 2021
         </div>
     </body>
 
