Add title section content

--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
                 </ul>
             </div>
         </div>
+        <div class="title-wrapper">
+            <div class="title">
+                <div class="lhs">
+                    <h1>Main title for this website</h1>
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the
+                        color
+                        is lower contrast
+                    </p>
+                    <button>Sign up</button>
+                </div>
+                <div class="rhs">
+                    <img src="./img/underpass.jpg" alt="A man walking in an underpass with warm lighting">
+                </div>
+            </div>
+        </div>
     </body>
 
 </html>
