Add call to action section content

--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
             </blockquote>
             <p>- Thor, God of Thunder</p>
         </div>
+        <div class="call-to-action-wrapper">
+            <div class="call-to-action">
+                <div class="lhs">
+                    <div class="lhs-title">Call to action! It's time!</div>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button>Sign up</button>
+            </div>
+        </div>
     </body>
 
 </html>
