--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                 <button>Sign up</button>
             </div>
         </div>
+        <div class="footer">
+            Copyright © The Odin Project 2021
+        </div>
     </body>
 
 </html>
