--- a/index.html
+++ b/index.html
@@ -55,16 +55,18 @@
                 </figure>
             </div>
         </div>
-        <div class="quote">
-            <blockquote>
-                <p>
-                    This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
-                    or
-                    maybe
-                    people will actually read it. Who knows? All I know is that it looks nice.
-                </p>
-            </blockquote>
-            <p>- Thor, God of Thunder</p>
+        <div class="quote-wrapper">
+            <div class="quote">
+                <blockquote>
+                    <p>
+                        This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
+                        or
+                        maybe
+                        people will actually read it. Who knows? All I know is that it looks nice.
+                    </p>
+                </blockquote>
+                <p>- Thor, God of Thunder</p>
+            </div>
         </div>
         <div class="call-to-action-wrapper">
             <div class="call-to-action">
